--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,81 @@
     <artifactId>SomeExamples</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <developers>
+        <developer>
+            <id>Dez</id>
+            <name>Ivan Gontarenko</name>
+            <email></email>
+            <organization></organization>
+            <organizationUrl></organizationUrl>
+            <roles>
+                <role>Junior Java Software Engineer</role>
+            </roles>
+        </developer>
+
+        <developer>
+            <id>evgmoskalenko</id>
+            <name>Evgeniy Moskalenko</name>
+            <email>evg@evgmoskalenko.com</email>
+            <organization>BoomersGROUP</organization>
+            <organizationUrl>http://boomersgroup.com/</organizationUrl>
+            <roles>
+                <role>Junior QA developer</role>
+            </roles>
+        </developer>
+    </developers>
+
+    <properties>
+        <!-- Configuration -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+        <!--Dependencies-->
+        <springframework.version>4.2.5.RELEASE</springframework.version>
+        <properties.loader.version>1.4</properties.loader.version>
+        <logging.log4j.version>2.1</logging.log4j.version>
+
+        <!-- Directory Properties -->
+        <resource-test.directory>${project.basedir}/src/test/resources</resource-test.directory>
+        <resource-main.directory>${project.basedir}/src/main/resources</resource-main.directory>
+    </properties>
+
+    <dependencies>
+        <!-- Spring Framework-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${springframework.version}</version>
+        </dependency>
+
+        <!-- PropertyLoader-->
+        <dependency>
+            <groupId>ru.yandex.qatools.properties</groupId>
+            <artifactId>properties-loader</artifactId>
+            <version>${properties.loader.version}</version>
+        </dependency>
+
+        <!-- log -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${logging.log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${logging.log4j.version}</version>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <finalName>${project.name}-${project.version}</finalName>
+        <resources>
+            <resource>
+                <directory>${resource-main.directory}</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+    </build>
 
 </project>
